crates/core/tests/snapshots/derive_config_enum_test__rendering__supports_renames_and_aliases.snap
---
source: crates/core/tests/derive_config_enum_test.rs
expression: pretty(output.to_token_stream())
---
#[automatically_derived]
impl schematic::ConfigEnum for Example {
    fn variants() -> Vec<Example> {
        vec![Self::VeryHigh, Self::Explicit, Self::Aliased]
    }
}
#[automatically_derived]
impl std::str::FromStr for Example {
    type Err = schematic::ConfigError;
    fn from_str(value: &str) -> std::result::Result<Self, schematic::ConfigError> {
        Ok(
            match value {
                "very-high" => Self::VeryHigh,
                "custom" => Self::Explicit,
                "aliased" | "second" | "third" => Self::Aliased,
                unknown => {
                    return Err(
                        schematic::ConfigError::EnumUnknownVariant(unknown.to_owned()),
                    );
                }
            },
        )
    }
}
#[automatically_derived]
impl std::convert::TryFrom<String> for Example {
    type Error = schematic::ConfigError;
    fn try_from(value: String) -> std::result::Result<Self, schematic::ConfigError> {
        std::str::FromStr::from_str(&value)
    }
}
#[automatically_derived]
impl std::convert::TryFrom<&String> for Example {
    type Error = schematic::ConfigError;
    fn try_from(value: &String) -> std::result::Result<Self, schematic::ConfigError> {
        std::str::FromStr::from_str(value)
    }
}
#[automatically_derived]
impl std::convert::TryFrom<&str> for Example {
    type Error = schematic::ConfigError;
    fn try_from(value: &str) -> std::result::Result<Self, schematic::ConfigError> {
        std::str::FromStr::from_str(value)
    }
}
#[automatically_derived]
impl std::fmt::Display for Example {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(
            f, "{}", match self { Self::VeryHigh => "very-high", Self::Explicit =>
            "custom", Self::Aliased => "aliased", }
        )
    }
}
#[automatically_derived]
impl schematic::Schematic for Example {
    fn schema_name() -> Option<String> {
        Some("Example".into())
    }
    fn build_schema(mut schema: schematic::SchemaBuilder) -> schematic::Schema {
        use schematic::schema::*;
        schema
            .enumerable(
                EnumType::from_schemas(
                    [
                        Schema {
                            name: Some("very-high".into()),
                            ty: Schema::literal_value(
                                    LiteralValue::String("very-high".into()),
                                )
                                .ty,
                            ..Default::default()
                        },
                        Schema {
                            name: Some("custom".into()),
                            ty: Schema::literal_value(
                                    LiteralValue::String("custom".into()),
                                )
                                .ty,
                            ..Default::default()
                        },
                        Schema {
                            name: Some("aliased".into()),
                            ty: Schema::literal_value(
                                    LiteralValue::String("aliased".into()),
                                )
                                .ty,
                            ..Default::default()
                        },
                    ],
                    None,
                ),
            )
    }
}
